[metadata]
name = python-keystoneclient-x509
summary = x509 authentication for the OpenStack clients
description-file = 
	README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier = 
	Environment :: OpenStack
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 2.6

[files]
packages = 
	keystoneclient_x509

[entry_points]
keystoneclient.auth.plugin = 
	v3x509 = keystoneclient_x509.v3:X509

[wheel]
universal = 1

[egg_info]
tag_date = 0
tag_svn_revision = 0
tag_build = 

